# docker-registry-cli

./: .gitignore  LICENSE  pyproject.toml  sample.env  setup.cfg
docker_registry_cli/: __init__.py  __main__.py  cli.py  config.py
docker_registry_cli/commands/: __init__.py  custom_print.py  ls.py  remove.py
docker_registry_cli/registry/: api.py
docs/: README.md
scripts/: format  test
